Current version (1.5-trunk):
  - API is available only for a given whitelist IPs
  - API is read only
  - Scripts showing how to use the API are available in 
scripts/webservice_examples directory:
  scripts/webservice_examples/00_my_first_use.py
    - 00_my_first_use.py: a simple script that display sites
    - 02_station_services.py: displays services for each equipment of each site
  - API permits filtering, searching and ordering these objects
  - New RESTful API available on /api with some objects:
    - Site: /api/sites
    - Actor: /api/actors
    - Network: /api/networks
    - Channel: /api/channels
    - CalibrationUnit: /api/calibration_units
    - ChannelDatatype: /api/channel_datatypes
    - Equipment: /api/equipments
    - Service: /api/services
    - Chain: /api/chains

Version 1.4:
  - New theme: django-flat-theme
  - Delete comments on Network, Channel and StationSite. It will be back in a later stage
  - Improve StationSite display. It takes 142 sec first to be displayed. Now approximatively 5 seconds.
  - Delete useless "Add intervention" button on Intervention list to avoid problem of making a new intervention
  - Add a filter on Intervenants
  - First Travis CI file (not tested)
  - Fix naive datetime error for Intervention when creating new Station objects
  - Take down Equipment and StationSite behaviour from Forms to Models
  - Delete ChainedForeignKey fields and delete 8 links between Equipment/Type/SuperType
  - Replace smart-selects module by autocomplete-light
  - Make the website title editable (in settings)
  - Developer documentation improved (Cf. README.md)
  - Make the project PEP8 and flake8 compatible
  - Functional tests with Selenium
  - Tests are now available in this project
  - Use Docker to generate a development/production environment
  - Porting application to Python 3.4 (but keep python2 compatible)
  - Migrate from Django 1.7 to 1.8
  - Migrate from Django 1.6 to 1.7
  - Migrate from Django 1.5 to 1.6