@@ -27,6 +27,7 @@ apirouter.register(r'calibration_units', api_views.CalibrationUnitViewSet)
 apirouter.register(r'channel_datatypes', api_views.ChannelDatatypeViewSet)
 apirouter.register(r'equipments', api_views.EquipmentViewSet)
 apirouter.register(r'services', api_views.ServiceViewSet)
+apirouter.register(r'ipaddresses', api_views.IPAddressViewSet)
 apirouter.register(r'chains', api_views.ChainViewSet)
 
 urlpatterns = [
